--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -1,151 +1,96 @@
-<head>
-    <meta charset="utf-8">
-
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/checkout/">
-
-
-
-    <!-- Bootstrap core CSS -->
-
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-        }
-        
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
-
-
-    <!-- Custom styles for this template -->
-</head>
-
-<body class="bg-light">
-
+<body>
     <div class="container">
         <main>
             <!-- <div class="py-5 text-center">
                 <h2>Registro</h2>
                 <p class="lead">Registrate para poder reservar!</p>
             </div> -->
-
-
             <div class="row g-5" style="padding-top: 50px;">
                 <div class="col-md-5 col-lg-4 order-md-last">
                     <!-- <img class="d-block mx-auto mb-4" src="https://media.discordapp.net/attachments/833808504766070846/837368529694621776/Icono_2.png" alt=""> -->
                 </div>
                 <div class="col-md-7 col-lg-8">
                     <h4 class="mb-3">Registro</h4>
-                    <form class="needs-validation" novalidate>
+                    <form class="needs-validation">
                         <div class="row g-3">
                             <div class="col-sm-6">
-                                <label for="firstName" class="form-label">Nombre</label>
-                                <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-                                <div class="invalid-feedback">
-                                    Valid first name is required.
-                                </div>
+                                <label for="inputNombre" class="form-label">Nombre</label>
+                                <input type="text" class="form-control" id="inputNombre" name="nombre" #nombre="ngModel" [(ngModel)]="usuarioModelAdd.nombre" required>
                             </div>
 
                             <div class="col-sm-6">
                                 <label for="lastName" class="form-label">Apellido</label>
-                                <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-                                <div class="invalid-feedback">
-                                    Valid last name is required.
-                                </div>
+                                <input type="text" class="form-control" id="lastName" placeholder="Tu apellido" name="apellido" #apellido="ngModel" [(ngModel)]="usuarioModelAdd.apellido">
                             </div>
 
                             <div class="col-12">
                                 <label for="username" class="form-label">Nombre de Usuario</label>
                                 <div class="input-group has-validation">
                                     <span class="input-group-text">@</span>
-                                    <input type="text" class="form-control" id="username" placeholder="Usuario" required>
-                                    <div class="invalid-feedback">
-                                        Your username is required.
-                                    </div>
+                                    <input type="text" class="form-control" id="username" placeholder="Nombre de Usuario" name="usuario" #usuario="ngModel" [(ngModel)]="usuarioModelAdd.usuario">
                                 </div>
                             </div>
 
                             <div class="col-12">
                                 <label for="email" class="form-label">Correo <span class="text-muted"></span></label>
-                                <input type="email" class="form-control" id="email" placeholder="usuario@ejemplo.com">
-                                <div class="invalid-feedback">
-                                    Please enter a valid email address for shipping updates.
-                                </div>
+                                <input type="email" class="form-control" id="email" placeholder="usuario@ejemplo.com" name="correo" #correo="ngModel" [(ngModel)]="usuarioModelAdd.correo">
                             </div>
-
+                            <div class="col-12">
+                                <label for="exampleInputPassword1">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="password" #password="ngModel" [(ngModel)]="usuarioModelAdd.password">
+                            </div>
                             <div class="col-12">
                                 <label for="address" class="form-label">Direccion</label>
-                                <input type="text" class="form-control" id="address" placeholder="Tu direccion" required>
-                                <div class="invalid-feedback">
-                                    Please enter your shipping address.
-                                </div>
+                                <input type="text" class="form-control" id="address" placeholder="Tu direccion" name="direccion" #direccion="ngModel" [(ngModel)]="usuarioModelAdd.direccion">
                             </div>
 
-                            <div class="col-12">
+                            <!-- <div class="col-12">
                                 <label for="address2" class="form-label">Fecha de Nacimiento <span class="text-muted"></span></label>
-                                <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
-                            </div>
+                                <input type="text" class="form-control" id="address2" placeholder="Fecha de Nacimiento" name="fecha" #fecha="ngModel" [(ngModel)]="usuarioModelAdd.nacimiento">
+                            </div> -->
+
+
 
                             <div class="col-md-5">
                                 <label for="country" class="form-label">Pais</label>
-                                <select class="form-select" id="country" required>
-                <option value="">Choose...</option>
-                <option>Guatemala</option>
-              </select>
-                                <div class="invalid-feedback">
-                                    Please select a valid country.
-                                </div>
+                                <select class="form-select" id="country" name="pais" #pais="ngModel" [(ngModel)]="usuarioModelAdd.pais">
+                                    <option value="">Choose...</option>
+                                    <option>Guatemala</option>
+                                    </select>
                             </div>
-
                             <div class="col-md-4">
                                 <label for="state" class="form-label">Ciudad</label>
-                                <select class="form-select" id="state" required>
-                <option value="">Choose...</option>
-                <option>Guatemala</option>
-              </select>
-                                <div class="invalid-feedback">
-                                    Please provide a valid state.
-                                </div>
+                                <select class="form-select" id="state" name="ciudad" #ciudad="ngModel" [(ngModel)]="usuarioModelAdd.ciudad">
+                                    <option value="">Choose...</option>
+                                    <option>Guatemala</option>
+                                </select>
                             </div>
 
                             <div class="col-md-3">
                                 <label for="zip" class="form-label">Codigo Postal</label>
-                                <input type="text" class="form-control" id="zip" placeholder="" required>
-                                <div class="invalid-feedback">
-                                    Zip code required.
-                                </div>
+                                <input type="text" class="form-control" id="zip" placeholder="">
                             </div>
+
+                            <mat-form-field class="col-5">
+                                <input matInput [matDatepicker]="picker" placeholder="Escoge tu nacimiento" name="fecha" #fecha="ngModel" [(ngModel)]="usuarioModelAdd.nacimiento">
+                                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                <mat-datepicker #picker></mat-datepicker>
+                            </mat-form-field>
+
                         </div>
-
                         <hr class="my-4">
-
-
-                        <button class="w-100 btn btn-primary btn-lg" type="submit">Registrarme</button>
+                        <button class="w-100 btn btn-primary btn-lg" type="button" (click)="registrarUsuario()">Registrarme</button>
                     </form>
                 </div>
             </div>
         </main>
-
         <footer class="my-5 pt-5 text-muted text-center text-small">
-            <p class="mb-1">&copy; 2017–2021 Company Name</p>
+            <p class="mb-1">&copy; 2021 RoundTrip</p>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="#">Privacy</a></li>
-                <li class="list-inline-item"><a href="#">Terms</a></li>
-                <li class="list-inline-item"><a href="#">Support</a></li>
+                <li class="list-inline-item"><a>Privacy</a></li>
+                <li class="list-inline-item"><a>Terms</a></li>
+                <li class="list-inline-item"><a>Support</a></li>
             </ul>
         </footer>
     </div>
-
-
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-
-    <script src="form-validation.js"></script>
 </body>
