--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,24 @@
-<p>login works!</p>
+<div class="container col-3 border">
+    <form (ngSubmit)="login()">
+
+        <div class="form-group text-center">
+            <img src="img/logoLogin.png" height="40" width="120" />
+            <br><br>
+            <h3>Acceder</h3>
+        </div>
+
+        <div class="form-group">
+            <label>Nombre de Usuario</label>
+            <input class="form-control" type="text" placeholder="Ingrese su Usuario" name="usuario" #usuario="ngModel" [(ngModel)]="usuarioModel.usuario">
+
+        </div>
+
+        <div class=" form-group">
+            <label>Password:</label>
+            <input class="form-control" type="password" name="txtCorreo" placeholder="Ingrese su contraseña" name="pass" #pass="ngModel" [(ngModel)]="usuarioModel.password">
+        </div>
+        <br>
+        <input class="btn btn-primary btn-block" type="submit" name="accion" value="Ingresar">
+
+    </form>
+</div>
