--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,10 +11,12 @@
 
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active"><a href="#" class="nav-link">Home<span class="sr-only">(current)</span></a></li>
-                <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Services</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/login" routerLinkActive="active">Login<span class="sr-only">(current)</span></a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/registrar" routerLinkActive="active">Registrar Usuario</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/login" routerLinkActive="active">Services</a></li>
+                <li class="nav-item">
+                    <a class="nav-link" *ngIf="_usuarioService.getIdentidad().nombre">Bienvenido {{_usuarioService.getIdentidad().nombre}}</a>
+                </li>
             </ul>
         </div>
     </div>
