--- a/src/app/components/agregar-hotel/agregar-hotel.component.html
+++ b/src/app/components/agregar-hotel/agregar-hotel.component.html
@@ -1,4 +1,91 @@
-<select class="form-select" aria-label="Default select example" [(ngModel)]="selectedCountry.id"> 
-<option *ngFor="let country of countries" value={{country.id}}>Open this select menu</option>
-{{country.name}}
+
+<body>
+    <div class="container">
+        <main>
+            <div class="row g-5" style="padding-top: 50px;">
+                <div class="col-md-5 col-lg-4 order-md-last">
+                </div>
+                <div class="col-md-7 col-lg-4">
+                    <h4 class="mb-3">Registrar Hotel</h4>
+                    <form class="needs-validation">
+                        <div class="row g-3">
+                            <div class="col-sm-12">
+                                <label for="inputNombre" class="form-label">Nombre</label>
+                                <input type="text" class="form-control" id="inputNombre" name="nombre" #nombre="ngModel" [(ngModel)]="hotelModel.nombre">
+                            </div>
+
+                            <div class="col-sm-12">
+                                <label for="address" class="form-label">Direccion</label>
+                                <input type="text" class="form-control" id="address" placeholder="Tu direccion" name="direccion" #direccion="ngModel" [(ngModel)]="hotelModel.direccion">
+                            </div>
+
+                            <div class="col-sm-12">
+                                <label for="inputPais" class="form-label">Pais</label>
+                                <select class="form-select" id="inputPais" aria-label="Default select example" name="pais" #pais="ngModel" [(ngModel)]="selectedCountry.id" (change)='onSelect($event.target.value)'> 
+                                    <option *ngFor="let country of countries" value={{country.id}} >{{country.name}}</option>
+                                </select>
+                                <input  type="text" name="pais1" id="pais1" value={{hotelModel.nombre}}>
+                                <input  type="text" name="pais2" id="pais2" value={{hotelModel.direccion}}>
+                                <input  type="text" name="pais3" id="pais3" value={{hotelModel.pais}}>
+                                <input  type="text" name="pais4" id="pais4" value={{hotelModel.ciudad}}>
+                            </div>
+                            
+                            <div class="col-sm-12">
+                                <label for="inputCiudad" class="form-label">Ciudad</label>
+                                <select class="form-select" id="inputCiudad" aria-label="Default select example" name="ciudad" #ciudad="ngModel" [(ngModel)]="hotelModel.ciudad" > 
+                                    <option *ngFor="let city of cities" value={{city.name}} >{{city.name}}</option>
+                                </select>
+                            </div>
+
+                        <hr class="col-xs-12">
+
+
+                        <h4 class="mb-3">Registrar Usuario</h4>
+                            <div class="col-sm-12">
+                                <label for="inputUsuario" class="form-label">Usuario</label>
+                                <input type="text" class="form-control" id="inputUsuario" name="usuario" #usuario="ngModel" [(ngModel)]="usuarioModel.usuario" >
+                            </div>
+                            <div class="col-sm-12">
+                                <label for="inputCorreo" class="form-label">Correo</label>
+                                <input type="email" class="form-control" id="inputCorreo" name="correo" #correo="ngModel" [(ngModel)]="usuarioModel.correo" >
+                            </div>
+                            <div class="col-sm-12">
+                                    <label for="inputPassword" class="form-label">Password</label>
+                                    <input type="password" class="form-control" id="inputPassword" name="password" #password="ngModel" [(ngModel)]="usuarioModel.password" >
+                            </div>
+
+                        </div>
+
+                        <hr class="my-4">
+
+                        
+                        <button class="w-100 btn btn-primary btn-lg" type="button" (click)='agregarHotel()'>Registrar Hotel</button>
+                    </form>
+                </div>
+            </div>
+        </main>
+        <footer class="my-5 pt-5 text-muted text-center text-small">
+            <p class="mb-1">&copy; 2021 RoundTrip</p>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a>Privacy</a></li>
+                <li class="list-inline-item"><a>Terms</a></li>
+                <li class="list-inline-item"><a>Support</a></li>
+            </ul>
+        </footer>
+    </div>
+</body>
+
+<!-- <select class="form-select" aria-label="Default select example" [(ngModel)]="selectedCountry.id" (change)='onSelect($event.target.value)'> 
+    <option *ngFor="let country of countries" value={{country.id}}>{{country.name}}</option>
 </select>
+
+<br>
+
+<select class="form-select" aria-label="Default select example" > 
+    <option *ngFor="let city of cities" value={{city.id}}>
+        {{city.name}}
+    </option>
+</select> -->
+
+
+                    
