--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,11 +12,14 @@
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" routerLink="/login" routerLinkActive="active">Login<span class="sr-only">(current)</span></a></li>
-                <li class="nav-item"><a class="nav-link" routerLink="/registrar" routerLinkActive="active">Registrar Usuario</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/registro" routerLinkActive="active">Registrar Usuario</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/login" routerLinkActive="active">Services</a></li>
-                <li class="nav-item">
-                    <a class="nav-link" *ngIf="_usuarioService.getIdentidad().nombre">Bienvenido {{_usuarioService.getIdentidad().nombre}}</a>
+                <li class="nav-item active">
+                    <a class="nav-link" *ngIf="identidad; else btnLogin">{{identidad.usuario}}</a>
                 </li>
+                <ng-template #btnLogin>
+                    <button type="button" class="btn btn-outline-info" routerLink='/login'>Login</button>
+                </ng-template> 
             </ul>
         </div>
     </div>
