--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -79,7 +79,7 @@
 
                         </div>
                         <hr class="my-4">
-                        <button class="w-100 btn btn-primary btn-lg" type="button" (click)="registrarUsuario()">Registrarme</button>
+                        <button class="w-100 btn btn-primary btn-lg" type="button" (click)="registrarUsuario()" routerLink='/principal'>Registrarme</button>
                     </form>
                 </div>
             </div>
