Add CheckInOut Reservacion Principal

--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -7,10 +7,66 @@
                 <div class="card-body">
                     <h5 class="card-title">{{hot.pais}}</h5>
                     <p class="card-text">Paises de {{hot.pais}}</p>
-                    <button type="button" class="btn btn-primary" [routerLink]="['/hoteles-pais',hot.pais]"><i class="bi bi-info-square"></i></button>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)=(obteneridPais(hot.pais))>
+                        Ver Hoteles
+                    </button>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                 </div>
             </div>
-            
-    </div>    
-</div>
+        </div>    
+    </div>   
+    
+    <!-- Button trigger modal -->
+
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
+
+    <style> 
+      .datePickers{
+      z-index: 1200}
+      </style>
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Encuentra Hoteles en {{idPais}}</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          
+          
+          <mat-form-field class='datePickers'>
+            <input matInput [matDatepicker]="picker" placeholder="CheckIn" name="checkIn" #checkIn="ngModel" [(ngModel)]="reservacionModelAdd.checkIn">
+            <mat-datepicker-toggle matSuffix [for]="picker" ></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+        
+        
+          <mat-form-field>
+            <input matInput [matDatepicker]="picker1" placeholder="CheckOut" name="checkOut" #checkOut="ngModel" [(ngModel)]="reservacionModelAdd.checkOut">
+            <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+            <mat-datepicker #picker1></mat-datepicker>
+          </mat-form-field>
+        
+
+            <!-- <mat-form-field class="col-6">
+                <input matInput [matDatepicker]="picker" placeholder="CheckIn" name="checkIn" #checkIn="ngModel" [(ngModel)]="reservacionModelAdd.checkIn">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+            <mat-form-field class="col-6">
+                <input matInput [matDatepicker]="picker" placeholder="CheckOut" name="checkOut" #checkOut="ngModel" [(ngModel)]="reservacionModelAdd.checkOut">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field> -->
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" [routerLink]="['/hoteles-pais',idPais]" (click)='agregarChekInOut()'><i class="bi bi-info-square"></i>Ir</button>
+        </div>
+      </div>
+    </div>
+
+    
+  </div>
+  
