--- a/src/app/components/agregar-hotel/agregar-hotel.component.html
+++ b/src/app/components/agregar-hotel/agregar-hotel.component.html
@@ -4,10 +4,12 @@
             <div class="row g-5" style="padding-top: 50px;">
                 <div class="col-md-5 col-lg-4 order-md-last">
                 </div>
-                <div class="col-md-7 col-lg-5">
-                    <h4 class="mb-3">Registrar Hotel</h4>
+                <div class="col-12">
                     <form >
-                        <div class="row g-3">
+                        <div class='col-12'>
+                            <div class="row g-3">
+                            <div class='col-5'>
+                                <h4 class="mb-3">Registrar Hotel</h4>
                             <div class="col-sm-12">
                                 <label for="nombre" class="form-label">Nombre</label>
                                 <input type="text" class="form-control" id="nombre" name="nombre" #nombre="ngModel" [(ngModel)]="hotelUsuarioModel.nombre">
@@ -31,11 +33,11 @@
                                     <option *ngFor="let city of cities" value={{city.name}} >{{city.name}}</option>
                                 </select>
                             </div>
+                        </div>
 
-                        <hr class="col-xs-12">
 
-
-                        <h4 class="mb-3">Registrar Usuario</h4>
+                        <div class='col-5'>
+                        <h4 class="mb-3">Registrar Administrador de este Hotel</h4>
                             <div class="col-sm-12">
                                 <label for="inputUsuario" class="form-label">Usuario</label>
                                 <input type="text" class="form-control" id="inputUsuario" name="usuario" #usuario="ngModel" [(ngModel)]="hotelUsuarioModel.usuario" >
@@ -50,7 +52,8 @@
                             </div>
 
                         </div>
-
+                    </div>
+                    </div>
                         <hr class="my-4">
 
                         
