--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
     <div class="container">
-        <a href="#" class="navbar-brand">
+        <a routerLink='/principal' class="navbar-brand">
             <!-- Logo Image -->
             <img src="https://media.discordapp.net/attachments/833808504766070846/837368544697122816/Icono_3.png" width="45" alt="" class="d-inline-block align-middle mr-2">
             <!-- Logo Text -->
@@ -13,7 +13,8 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" routerLink="/login" routerLinkActive="active">Login<span class="sr-only">(current)</span></a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/registro" routerLinkActive="active">Registrar Usuario</a></li>
-                <li class="nav-item"><a class="nav-link" routerLink="/login" routerLinkActive="active">Services</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/agregar-hotel" routerLinkActive="active">Registrar Hotel</a></li>
+                
                 <li class="nav-item active">
                     <a class="nav-link" *ngIf="identidad; else btnLogin">{{identidad.usuario}}</a>
                 </li>
