--- a/src/app/components/hoteles-pais/hoteles-pais.component.html
+++ b/src/app/components/hoteles-pais/hoteles-pais.component.html
@@ -1,6 +1,8 @@
 <div class="container">
 
     <div class="col-xs-12 col-sm-4" *ngFor="let hotelesNGF of hotelModelGet; let i = index">
+    <h1>Hoteles de {{hotelesNGF.pais}}</h1>
+    <hr>
         <div class="card mb-3">
             <!-- <img src="..." class="card-img-top" alt="..."> -->
             <div class="card-body">
