--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -1,13 +1,33 @@
 <div class='container'>
+  <form class="form-inline my-2 my-lg-0">
+    <input type="text" class="form-control" id="nombre" placeholder="Hotel" name="nombre" #nombre="ngModel" [(ngModel)]="hotelModelNombre.nombre">
+
+    <mat-form-field>
+      <input matInput [matDatepicker]="picker2" placeholder="CheckIn" name="checkIn" #checkIn="ngModel" [(ngModel)]="reservacionModelAdd.checkIn">
+      <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+      <mat-datepicker #picker2></mat-datepicker>
+    </mat-form-field>
+
+    <mat-form-field>
+      <input matInput [matDatepicker]="picker3" placeholder="CheckOut" name="checkOut" #checkOut="ngModel" [(ngModel)]="reservacionModelAdd.checkOut">
+      <mat-datepicker-toggle matSuffix [for]="picker3"></mat-datepicker-toggle>
+      <mat-datepicker #picker3></mat-datepicker>
+    </mat-form-field>
+
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit"  (click)='agregarChekInOutSearch()'>Search</button>
+  </form>
+
+
+
     <div class="col-3" *ngFor='let hot of hotelModelGet'>
 
             <label for="exampleFormControlInput1" class="form-label">{{hotCiudad}}</label>
             <div class="card mb-8">
                 <!-- <img src="..." class="card-img-top" alt="..."> -->
                 <div class="card-body">
-                    <h5 class="card-title">{{hot.pais}}</h5>
-                    <p class="card-text">Paises de {{hot.pais}}</p>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)=(obteneridPais(hot.pais))>
+                    <h5 class="card-title">{{hot}}</h5>
+                    <p class="card-text">Paises de {{hot}}</p>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)=(obteneridPais(hot))>
                         Ver Hoteles
                     </button>
                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
@@ -16,9 +36,7 @@
         </div>    
     </div>   
     
-    <!-- Button trigger modal -->
 
-  
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
 
