--- a/src/app/components/reservacion/reservacion.component.html
+++ b/src/app/components/reservacion/reservacion.component.html
@@ -37,9 +37,9 @@
     <div class="container">
         <main>
             <div class="py-5 text-center">
-                <img class="d-block mx-auto mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-                <h2>Checkout form</h2>
-                <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
+                <img class="d-block mx-auto mb-4" src="https://media.discordapp.net/attachments/833808504766070846/837368529694621776/Icono_2.png" alt="" width="72" height="72 ">
+                <h2>Reservación de la habitación {{habitacionModelGet.nombre}}</h2>
+                <p class="lead">Por favor ingrese todos los datos que se le solicitan, para poder completar la reservación. Puede agregar los servicios que desee utilizar durante su estadía</p>
             </div>
 
             <div class="row g-5">
@@ -90,27 +90,30 @@
                         </div>
                     </form>
                 </div>
+
                 <div class="col-md-7 col-lg-8">
-                    <h4 class="mb-3">Billing address</h4>
+                    <h4 class="mb-3">Datos de Contacto</h4>
                     <form class="needs-validation" novalidate>
                         <div class="row g-3">
                             <div class="col-sm-6">
-                                <label for="firstName" class="form-label">First name</label>
-                                <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
+                                <label for="nombrePersona" class="form-label">Nombre</label>
+                                <input type="text" class="form-control" id="nombrePersona" placeholder="Tu Nombre" value=""
+                                name="nombrePersona" #nombrePersona="ngModel" [(ngModel)]="reservacionModelAdd.nombrePersona"  required>
                                 <div class="invalid-feedback">
                                     Valid first name is required.
                                 </div>
                             </div>
 
                             <div class="col-sm-6">
-                                <label for="lastName" class="form-label">Last name</label>
-                                <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
+                                <label for="apellidoPersona" class="form-label">Apellido</label>
+                                <input type="text" class="form-control" id="apellidoPersona" placeholder="Tu Apellido" value=""
+                                name="apellidoPersona" #apellidoPersona="ngModel" [(ngModel)]="reservacionModelAdd.apellidoPersona" required>
                                 <div class="invalid-feedback">
                                     Valid last name is required.
                                 </div>
                             </div>
 
-                            <div class="col-12">
+                            <!-- <div class="col-12">
                                 <label for="username" class="form-label">Username</label>
                                 <div class="input-group has-validation">
                                     <span class="input-group-text">@</span>
@@ -119,25 +122,27 @@
                                         Your username is required.
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
 
                             <div class="col-12">
-                                <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
-                                <input type="email" class="form-control" id="email" placeholder="you@example.com">
+                                <label for="correoPersona" class="form-label">Correo <span class="text-muted"></span></label>
+                                <input type="email" class="form-control" id="correoPersona" placeholder="correo@ejemplo.com"
+                                name="correoPersona" #correoPersona="ngModel" [(ngModel)]="reservacionModelAdd.correoPersona">
                                 <div class="invalid-feedback">
                                     Please enter a valid email address for shipping updates.
                                 </div>
                             </div>
 
                             <div class="col-12">
-                                <label for="address" class="form-label">Address</label>
-                                <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
+                                <label for="telefonoPersona" class="form-label">Telefono</label>
+                                <input type="text" class="form-control" id="telefonoPersona" placeholder="Tu Telefono"
+                                name="telefonoPersona" #telefonoPersona="ngModel" [(ngModel)]="reservacionModelAdd.telefonoPersona" required>
                                 <div class="invalid-feedback">
                                     Please enter your shipping address.
                                 </div>
                             </div>
 
-                            <div class="col-12">
+                            <!-- <div class="col-12">
                                 <label for="address2" class="form-label">Address 2 <span class="text-muted">(Optional)</span></label>
                                 <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
                             </div>
@@ -170,10 +175,10 @@
                                 <div class="invalid-feedback">
                                     Zip code required.
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
 
-                        <hr class="my-4">
+                        <!-- <hr class="my-4">
 
                         <div class="form-check">
                             <input type="checkbox" class="form-check-input" id="same-address">
@@ -183,56 +188,60 @@
                         <div class="form-check">
                             <input type="checkbox" class="form-check-input" id="save-info">
                             <label class="form-check-label" for="save-info">Save this information for next time</label>
-                        </div>
+                        </div> -->
 
                         <hr class="my-4">
 
-                        <h4 class="mb-3">Payment</h4>
+                        <h4 class="mb-3">Datos de Pago</h4>
 
                         <div class="my-3">
                             <div class="form-check">
-                                <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required>
+                                <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked>
                                 <label class="form-check-label" for="credit">Credit card</label>
                             </div>
                             <div class="form-check">
-                                <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required>
+                                <input id="debit" name="paymentMethod" type="radio" class="form-check-input">
                                 <label class="form-check-label" for="debit">Debit card</label>
                             </div>
                             <div class="form-check">
-                                <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required>
+                                <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" >
                                 <label class="form-check-label" for="paypal">PayPal</label>
                             </div>
                         </div>
 
                         <div class="row gy-3">
                             <div class="col-md-6">
-                                <label for="cc-name" class="form-label">Name on card</label>
-                                <input type="text" class="form-control" id="cc-name" placeholder="" required>
-                                <small class="text-muted">Full name as displayed on card</small>
+                                <label for="nombreTarjeta" class="form-label">Nombre de la Tarjeta</label>
+                                <input type="text" class="form-control" id="nombreTarjeta" placeholder=""
+                                name="nombreTarjeta" #nombreTarjeta="ngModel" [(ngModel)]="reservacionModelAdd.nombreTarjeta" required>
+                                <small class="text-muted">Nombre Completo de la Tarjeta</small>
                                 <div class="invalid-feedback">
                                     Name on card is required
                                 </div>
                             </div>
 
                             <div class="col-md-6">
-                                <label for="cc-number" class="form-label">Credit card number</label>
-                                <input type="text" class="form-control" id="cc-number" placeholder="" required>
+                                <label for="numeroTarjeta" class="form-label">Número de la Tarjeta</label>
+                                <input type="text" class="form-control" id="numeroTarjeta" placeholder=""
+                                name="numeroTarjeta" #numeroTarjeta="ngModel" [(ngModel)]="reservacionModelAdd.numeroTarjeta" required>
                                 <div class="invalid-feedback">
                                     Credit card number is required
                                 </div>
                             </div>
 
                             <div class="col-md-3">
-                                <label for="cc-expiration" class="form-label">Expiration</label>
-                                <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
+                                <label for="exp" class="form-label">Expiración</label>
+                                <input type="text" class="form-control" id="exp" placeholder=""
+                                name="exp" #exp="ngModel" [(ngModel)]="reservacionModelAdd.exp" required>
                                 <div class="invalid-feedback">
                                     Expiration date required
                                 </div>
                             </div>
 
                             <div class="col-md-3">
-                                <label for="cc-cvv" class="form-label">CVV</label>
-                                <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
+                                <label for="cvv" class="form-label">CVV</label>
+                                <input type="text" class="form-control" id="cvv" placeholder=""
+                                name="cvv" #cvv="ngModel" [(ngModel)]="reservacionModelAdd.cvv" required>
                                 <div class="invalid-feedback">
                                     Security code required
                                 </div>
@@ -241,7 +250,7 @@
 
                         <hr class="my-4">
 
-                        <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
+                        <button class="w-100 btn btn-primary btn-lg" type="submit" (click)='reservarHabitacion(idHabitacion)'>Rerservar</button>
                     </form>
                 </div>
             </div>
