Servicios Reservacion Inicio

--- a/src/app/components/habitaciones-hotel/habitaciones-hotel.component.html
+++ b/src/app/components/habitaciones-hotel/habitaciones-hotel.component.html
@@ -1,22 +1,161 @@
-<div class="container">
-<br>
+<main>
 
-    <h1> Aqui informacion del hotel</h1>
+    <!-- <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1" aria-current="true"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2" class=""></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3" class=""></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
+  
+          <div class="container">
+            <div class="carousel-caption text-start">
+              <h1>Example headline.</h1>
+              <p>Some representative placeholder content for the first slide of the carousel.</p>
+              <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
+  
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Another example headline.</h1>
+              <p>Some representative placeholder content for the second slide of the carousel.</p>
+              <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"></rect></svg>
+  
+          <div class="container">
+            <div class="carousel-caption text-end">
+              <h1>One more for good measure.</h1>
+              <p>Some representative placeholder content for the third slide of this carousel.</p>
+              <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div> -->
+
+    <div class="p-4 p-md-5 mb-4 text-white bg-secondary">
+        <div class="col-md-6 px-0">
+          <h1 class="display-4">{{hotelModelGet.nombre}}</h1>
+          <p class="lead my-3">Puedes ve a continuacion los servicios, eventos y habitaciones que tiene este hotel.</p>
+          <!-- <button type="button" class="btn btn-primary" [routerLink]="['/habitaciones-hotel',hotelesNGF._id]"><i class="bi bi-info-square"></i></button> -->
+          <!-- <button type="button" class="btn btn-primary" [routerLink]="['/reservacion',idHabitacion]"><i class="bi bi-info-square"></i> Reservar</button> -->
+        </div>
+      </div>
+  
+    <!-- Marketing messaging and featurettes
+    ================================================== -->
+    <!-- Wrap the rest of the page in another container to center all the content. -->
+  
+    <div class="container marketing">
+  
+      <!-- Three columns of text below the carousel -->
+      <h1 class="featurette-heading">Eventos<span class="text-muted"> </span></h1>
+
+      <div class="row" >
+        
+        <div class="col-lg-4" *ngFor="let eve of eventoModelGet; let i = index">
+          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+  
+          <h2>{{eve.evento}}</h2>
+          <p>{{eve.fecha}}</p>
+          <p><a class="btn btn-secondary" href="#">View details »</a></p>
+        </div><!-- /.col-lg-4 -->
+        
+      </div><!-- /.row -->
+  
+  
+      <!-- START THE FEATURETTES -->
+  
+      <hr class="featurette-divider">
+      <h1 class="featurette-heading">Habitaciones<span class="text-muted"> </span></h1>
+
+      <div *ngFor="let habitacionesNGF of habitacionModelGet; let i = index">
+  
+      <div class="row featurette" *ngIf="i%2 == 0">
+        <div class="col-md-7">
+            
+          <h2 class="featurette-heading">{{habitacionesNGF.nombre}}<span class="text-muted"> Q {{habitacionesNGF.precio}} c/noche</span></h2>
+          <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+          <button type="button" class="btn btn-primary" [routerLink]="['/detalle-habitacion',habitacionesNGF._id]"><i class="bi bi-info-square"></i> Detalle</button>
+
+        </div>
+        <div class="col-md-5">
+          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+  
+        </div>
+      </div>
+
+          <div class="row featurette" *ngIf="i%2 == 1">
+            <div class="col-md-7 order-md-2">
+              <h2 class="featurette-heading" >{{habitacionesNGF.nombre}} <span class="text-muted">Q {{habitacionesNGF.precio}} c/noche</span></h2>
+              <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+              <button type="button" class="btn btn-primary" [routerLink]="['/detalle-habitacion',habitacionesNGF._id]"><i class="bi bi-info-square"></i> Detalle</button>
+            </div>
+            <div class="col-md-5 order-md-1">
+              <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+            </div>
+          </div>
+          <hr class="featurette-divider">
+      </div>
+  
+      
+  
+      <!-- /END THE FEATURETTES -->
+
+      <h1 class="featurette-heading">Servicios<span class="text-muted"> </span></h1>
+
+      <div class="row" >
+      <div class='col-xs-12 col-sm-4' *ngFor="let ser of servicioModelGet; let i = index">
+          <div class="card mb-3"  >
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">{{ser.servicio}}</h5>
+              <p class="card-text">{{ser.descripcion}}</p>
+              <a href="#" class="btn btn-primary">Detalle</a>
+            </div>
+          </div>
+      </div>
+
+
+      
+    </div>
+  
+    </div><!-- /.container -->
+  
+  
+    <!-- FOOTER -->
+    
+  </main>
 <br>
+<!-- <div class="container">
     <div class="col-xs-12 col-sm-4" *ngFor="let habitacionesNGF of habitacionModelGet; let i = index">
         <div class="card mb-3">
-            <!-- <img src="..." class="card-img-top" alt="..."> -->
             <div class="card-body">
             <h5 class="card-title">{{habitacionesNGF.nombre}}</h5>
             <p class="card-text">{{habitacionesNGF.tipo}}</p>
             <p class="card-text">{{habitacionesNGF.precio}}</p>
             <p class="card-text">{{habitacionesNGF._id}}</p>
-            <!-- <button type="button" class="btn btn-primary" [routerLink]="['/habitaciones-hotel',hotelesNGF._id]"><i class="bi bi-info-square">Reservacion</i></button> -->
             <button type="button" class="btn btn-primary" [routerLink]="['/detalle-habitacion',habitacionesNGF._id]"><i class="bi bi-info-square">Detalle</i></button>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
         </div>
     </div>
-</div>
-
-<!-- HACER MODAL EN PRINCIPAL -->
+</div> -->
