--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -1,1 +1,149 @@
-<p>usuarios works!</p>
+
+<div class="conteiner">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">Usuario</th>
+                <th scope="col">Rol</th>
+                <th scope="col">Email</th>
+                <th scope="col">Acciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let us of usuarioModelGet">
+                <td>{{us.usuario}}</td>
+                <td>{{us.rol}}</td>
+                <td>{{us.correo}}</td>
+                <td>
+                    <div class="btn-group" role="group" aria-label="Basic example">
+                        <button type="button" class="btn btn-primary" (click)="obtenerUsuarioId(us._id)" data-bs-toggle="modal" data-bs-target="#modalEditarUsuario">Editar</button>
+                        <button type="button" class="btn btn-primary" (click)="obtenerUsuarioId(us._id)" data-bs-toggle="modal" data-bs-target="#modalEliminarUsuario">Eliminar</button>
+                        <button type="button" class="btn btn-primary" (click)="obtenerUsuarioId(us._id)" data-bs-toggle="modal" data-bs-target="#modalVerUsuario">Ver</button>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+<!-- MODAL EDITAR -->
+<div class="modal fade" id="modalEditarUsuario" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Editar Usuario</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                
+                <form >
+                    <div class="mb-3" *ngIf="idUsuarioModel.rol == 'ROL_USUARIO'">
+                        <label for="inputNomrbe" class="form-label">Nombre</label>
+                        <input type="text " class="form-control" id="inputNombre" name="nombre" #nombre="ngModel" [(ngModel)]="idUsuarioModel.nombre">
+                    </div>
+                    <div class="mb-3">
+                        <label for="inputUsuario" class="form-label">Usuario</label>
+                        <input type="text" class="form-control" id="inputUsuario" name="usuario" #usuario="ngModel" [(ngModel)]="idUsuarioModel.usuario">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="correo" #correo="ngModel" [(ngModel)]="idUsuarioModel.correo">
+                    </div>
+                    <div class="mb-3" *ngIf="idUsuarioModel.rol == 'ROL_USUARIO'">
+                        <label for="inputNomrbe" class="form-label">Apellido</label>
+                        <input type="text " class="form-control" id="inputNombre" name="apellido" #apellido="ngModel" [(ngModel)]="idUsuarioModel.apellido">
+                    </div>
+                    <div class="mb-3" *ngIf="idUsuarioModel.rol == 'ROL_USUARIO'">
+                        <label for="inputNomrbe" class="form-label">Direccion</label>
+                        <input type="text " class="form-control" id="inputNombre" name="direccion" #direccion="ngModel" [(ngModel)]="idUsuarioModel.direccion">
+                    </div>
+
+                    <div class="col-sm-12"  *ngIf="idUsuarioModel.rol == 'ROL_USUARIO'">
+                        <label for="pais" class="form-label">Pais</label>
+                        <select class="form-select" id="pais" aria-label="Default select example" name="pais" #pais="ngModel" [(ngModel)]="idUsuarioModel.pais" (change)='onSelect($event.target.value)'> 
+                            <option *ngFor="let country of countries" value={{country.id}} >{{country.name}}</option>
+                        </select>
+                    </div>
+                    <div class="col-sm-12"  *ngIf="idUsuarioModel.rol == 'ROL_USUARIO'">
+                        <label for="ciudad" class="form-label">Ciudad</label>
+                        <select class="form-select" id="ciudad" aria-label="Default select example" name="ciudad" #ciudad="ngModel" [(ngModel)]="idUsuarioModel.ciudad" > 
+                            <option *ngFor="let city of cities" value={{city.name}} >{{city.name}}</option>
+                        </select>
+                    </div>
+                
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="editarUsuario()">Guardar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Eliminar Usuario -->
+<div class="modal fade " id="modalEliminarUsuario" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Eliminar Usuario</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                ¿Está seguro de que desea eliminar el usuario {{idUsuarioModel.nombre}}?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                <button type="button" class="btn btn-primary"  data-bs-dismiss="modal" (click)="eliminarUsuario(idUsuarioModel._id)">Si, eliminar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- MODAL READ -->
+<div class="modal fade" id="modalVerUsuario" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Editar Usuario</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="mb-3" *ngIf="idUsuarioModel.rol == 'ROL_USUARIO'">
+                        <label for="inputNomrbe" class="form-label">Nombre</label>
+                        <input type="text " class="form-control" id="inputNombre" name="nombre" #nombre="ngModel" [(ngModel)]="idUsuarioModel.nombre" disabled>
+                    </div>
+                    <div class="mb-3">
+                        <label for="inputUsuario" class="form-label">Usuario</label>
+                        <input type="text" class="form-control" id="inputUsuario" name="usuario" #usuario="ngModel" [(ngModel)]="idUsuarioModel.usuario" disabled>
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="correo" #correo="ngModel" [(ngModel)]="idUsuarioModel.correo" disabled>
+                    </div>
+                    <div class="mb-3" *ngIf="idUsuarioModel.rol == 'ROL_USUARIO'">
+                        <label for="inputNomrbe" class="form-label">Apellido</label>
+                        <input type="text " class="form-control" id="inputNombre" name="apellido" #apellido="ngModel" [(ngModel)]="idUsuarioModel.apellido" disabled>
+                    </div>
+                    <div class="mb-3" *ngIf="idUsuarioModel.rol == 'ROL_USUARIO'">
+                        <label for="inputNomrbe" class="form-label">Direccion</label>
+                        <input type="text " class="form-control" id="inputNombre" name="direccion" #direccion="ngModel" [(ngModel)]="idUsuarioModel.direccion" disabled>
+                    </div>
+                    <div class="mb-3" *ngIf="idUsuarioModel.rol == 'ROL_USUARIO'">
+                        <label for="inputNomrbe" class="form-label">Pais</label>
+                        <input type="text " class="form-control" id="inputNombre" name="pais" #pais="ngModel" [(ngModel)]="idUsuarioModel.pais" disabled>
+                    </div>
+                    <div class="mb-3" *ngIf="idUsuarioModel.rol == 'ROL_USUARIO'">
+                        <label for="inputNomrbe" class="form-label">Ciudad</label>
+                        <input type="text " class="form-control" id="inputNombre" name="ciudad" #ciudad="ngModel" [(ngModel)]="idUsuarioModel.ciudad" disabled>
+                    </div>
+
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
