--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -1,5 +1,4 @@
-<body>
-    <div class="container">
+    <div class="container" style='margin-bottom: 100px;'>
         <main>
             <!-- <div class="py-5 text-center">
                 <h2>Registro</h2>
@@ -88,13 +87,4 @@
                 </div>
             </div>
         </main>
-        <footer class="my-5 pt-5 text-muted text-center text-small">
-            <p class="mb-1">&copy; 2021 RoundTrip</p>
-            <ul class="list-inline">
-                <li class="list-inline-item"><a>Privacy</a></li>
-                <li class="list-inline-item"><a>Terms</a></li>
-                <li class="list-inline-item"><a>Support</a></li>
-            </ul>
-        </footer>
     </div>
-</body>
