--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -1,5 +1,5 @@
 
-<div class="conteiner">
+<div class="conteiner" style='margin-bottom: 100px;'>
     <table class="table table-striped">
         <thead>
             <tr>
