--- a/src/app/components/hoteles-pais/hoteles-pais.component.html
+++ b/src/app/components/hoteles-pais/hoteles-pais.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style='margin-bottom: 150px;'>
 
     <div class="col-xs-12 col-sm-4" *ngFor="let hotelesNGF of hotelModelGet; let i = index">
     <h1>Hoteles de {{hotelesNGF.pais}}</h1>
