--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,8 +1,8 @@
-<div class="container col-3 border">
+<!-- <div class="container col-3 border">
     <form (ngSubmit)="login()">
 
         <div class="form-group text-center">
-            <!-- <img src="img/logoLogin.png" height="40" width="120" /> -->
+
             <br><br>
             <h3>Acceder</h3>
         </div>
@@ -21,4 +21,61 @@
         <input class="btn btn-primary btn-block" type="submit" name="accion" value="Ingresar">
 
     </form>
+</div> -->
+
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,100&display=swap" rel="stylesheet">
+
+<div class="main-bg">
+    <div class="box-conatiner">
+        <div id="a">
+            <div class="circle-ripple"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6 col-sm-6">
+                <h1 class="heading-left">Para continuar logeate</h1>
+            </div>
+            <div class="col-sm-6 col-md-6">
+                <div class="wrap-login100">
+                    <span class="login100-form-title">
+                        Log In
+                    </span>
+                    <form class="login100-form validate-form p-l-55 p-r-55 p-t-20">
+                       
+                        <div class="wrap-input100 validate-input m-b-16" data-validate="Please enter username">
+                            <input class="input100" type="text"  placeholder="Username" name="usuario" #usuario="ngModel" [(ngModel)]="usuarioModel.usuario">
+                            <span class="focus-input100"></span>
+                        </div>
+                        <div class="wrap-input100 validate-input" data-validate="Please enter password">
+                            <input class="input100" type="password" placeholder="Password" name="pass" #pass="ngModel" [(ngModel)]="usuarioModel.password">
+                            <span class="focus-input100"></span>
+                        </div>
+                        <div class="text-right p-t-13 p-b-23">
+                            <span class="txt1">
+                                ¿No tienes cuenta?
+                            </span>
+                            <a routerLink="/registro" class="txt2">
+                                Registrate
+                            </a>
+                        </div>
+                        <div class="container-login100-form-btn">
+                            <button class="login100-form-btn" (click)='login()'>
+                                Sign in
+                            </button>
+                        </div>
+                        <div class="flex-col-c p-t-140 p-b-40">
+                            <span class="txt1 p-b-9">
+                                Inicia Sesion
+                            </span>
+                            <a href="#" class="txt3">
+                                Sign up now
+                            </a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
