--- a/src/app/components/reservacion/reservacion.component.html
+++ b/src/app/components/reservacion/reservacion.component.html
@@ -1,43 +1,9 @@
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.83.1">
-    <title>Checkout example · Bootstrap v5.0</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/checkout/">
 
 
-
-    <!-- Bootstrap core CSS -->
-
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-        }
-        
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
-
-
-    <!-- Custom styles for this template -->
-</head>
-
-<body class="bg-light">
-
-    <div class="container">
+    <div class="container" style='margin-bottom: 100px;'>
         <main>
             <div class="py-5 text-center">
-                <img class="d-block mx-auto mb-4" src="https://media.discordapp.net/attachments/833808504766070846/837368529694621776/Icono_2.png" alt="" width="72" height="72 ">
+                <img class="d-block mx-auto mb-4" src="https://media.discordapp.net/attachments/695021143957962867/846990609474256906/Logosss.png" alt="" width="72" height="72 ">
                 <h2>Reservación de la habitación {{habitacionModelGet.nombre}}</h2>
                 <p class="lead">Por favor ingrese todos los datos que se le solicitan, para poder completar la reservación. Puede agregar los servicios que desee utilizar durante su estadía</p>
             </div>
@@ -45,51 +11,63 @@
             <div class="row g-5">
                 <div class="col-md-5 col-lg-4 order-md-last">
                     <h4 class="d-flex justify-content-between align-items-center mb-3">
-                        <span class="text-primary">Your cart</span>
-                        <span class="badge bg-primary rounded-pill">3</span>
+                        <span class="text-primary">Servicios</span>
+                        <span class="badge bg-primary "><i class="bi bi-bell"></i></span>
+                    </h4>
+
+                    <ul class="list-group mb-3">
+                                                
+                        <div *ngFor="let ser of servicioModelGet; let i = index">
+                            <li class="list-group-item d-flex justify-content-between lh-sm">
+                                <div class="form">
+                                    <h6 class="my-0">{{ser.servicio}}</h6>
+                                    <small class="text-muted">Q {{ser.precio}}</small> <br>
+                            <button class="btn btn-primary " type="submit" (click)='agregarServiciosReservacion(ser._id)'><i class="bi bi-plus-lg"></i> </button>
+
+                                </div><!-- *form-check-->
+                            </li>
+                        </div> <!-- *ngFor-->
+                    </ul>
+<br>
+                    <h4 class="d-flex justify-content-between align-items-center mb-3">
+                        <span class="text-primary">Tu reservacion</span>
+                        <span class="badge bg-primary "><i class="bi bi-cart-check"></i></span>
                     </h4>
                     <ul class="list-group mb-3">
                         <li class="list-group-item d-flex justify-content-between lh-sm">
                             <div>
-                                <h6 class="my-0">Product name</h6>
-                                <small class="text-muted">Brief description</small>
+                                <h6 class="my-0">{{habitacionModelGet.nombre}}</h6>
+                                <small class="text-muted">Habitacion</small>
                             </div>
-                            <span class="text-muted">$12</span>
+                            <span class="text-muted">{{reservacionModelGet.noches}} noches</span>
+                            <span class="text-muted">Q {{habitacionModelGet.precio}}</span>
                         </li>
-                        <li class="list-group-item d-flex justify-content-between lh-sm">
-                            <div>
-                                <h6 class="my-0">Second product</h6>
-                                <small class="text-muted">Brief description</small>
-                            </div>
-                            <span class="text-muted">$8</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between lh-sm">
-                            <div>
-                                <h6 class="my-0">Third item</h6>
-                                <small class="text-muted">Brief description</small>
-                            </div>
-                            <span class="text-muted">$5</span>
-                        </li>
+                        
+                        <div *ngFor="let ser of serviciosReservacion; let i = index">
+                            <li class="list-group-item d-flex justify-content-between lh-sm">
+                                <div class="form">
+                                    <h6 class="my-0">{{ser.nombre}}</h6>
+                                    <small class="text-muted">Q {{ser.precio}}</small> <br>
+                                    <button class="btn btn-danger " type="submit" (click)='eliminarServicioReservacion(ser.idServicio)'> <i class="bi bi-trash"></i></button>
+
+                                </div><!-- *form-check-->
+                            </li>
+                        </div> <!-- *ngFor-->
+                        
+                        
+                          
                         <li class="list-group-item d-flex justify-content-between bg-light">
-                            <div class="text-success">
-                                <h6 class="my-0">Promo code</h6>
-                                <small>EXAMPLECODE</small>
-                            </div>
-                            <span class="text-success">−$5</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between">
-                            <span>Total (USD)</span>
-                            <strong>$20</strong>
+                            <span>Total (Q)</span>
+                            <strong>Q {{reservacionModelGet.total}}</strong>
                         </li>
                     </ul>
 
-                    <form class="card p-2">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Promo code">
-                            <button type="submit" class="btn btn-secondary">Redeem</button>
-                        </div>
-                    </form>
-                </div>
+                    
+
+
+                </div> <!-- col-md-5 col-lg-4 order-md-last-->
+
+                
 
                 <div class="col-md-7 col-lg-8">
                     <h4 class="mb-3">Datos de Contacto</h4>
@@ -142,53 +120,8 @@
                                 </div>
                             </div>
 
-                            <!-- <div class="col-12">
-                                <label for="address2" class="form-label">Address 2 <span class="text-muted">(Optional)</span></label>
-                                <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
-                            </div>
-
-                            <div class="col-md-5">
-                                <label for="country" class="form-label">Country</label>
-                                <select class="form-select" id="country" required>
-                <option value="">Choose...</option>
-                <option>United States</option>
-              </select>
-                                <div class="invalid-feedback">
-                                    Please select a valid country.
-                                </div>
-                            </div>
-
-                            <div class="col-md-4">
-                                <label for="state" class="form-label">State</label>
-                                <select class="form-select" id="state" required>
-                <option value="">Choose...</option>
-                <option>California</option>
-              </select>
-                                <div class="invalid-feedback">
-                                    Please provide a valid state.
-                                </div>
-                            </div>
-
-                            <div class="col-md-3">
-                                <label for="zip" class="form-label">Zip</label>
-                                <input type="text" class="form-control" id="zip" placeholder="" required>
-                                <div class="invalid-feedback">
-                                    Zip code required.
-                                </div>
-                            </div> -->
                         </div>
 
-                        <!-- <hr class="my-4">
-
-                        <div class="form-check">
-                            <input type="checkbox" class="form-check-input" id="same-address">
-                            <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
-                        </div>
-
-                        <div class="form-check">
-                            <input type="checkbox" class="form-check-input" id="save-info">
-                            <label class="form-check-label" for="save-info">Save this information for next time</label>
-                        </div> -->
 
                         <hr class="my-4">
 
@@ -256,18 +189,9 @@
             </div>
         </main>
 
-        <footer class="my-5 pt-5 text-muted text-center text-small">
-            <p class="mb-1">&copy; 2017–2021 Company Name</p>
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="#">Privacy</a></li>
-                <li class="list-inline-item"><a href="#">Terms</a></li>
-                <li class="list-inline-item"><a href="#">Support</a></li>
-            </ul>
-        </footer>
+        
     </div>
 
 
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src="form-validation.js"></script>
-</body>
